--- a/tests/nested/core/core-snap-refresh-on-core/task.yaml
+++ b/tests/nested/core/core-snap-refresh-on-core/task.yaml
@@ -15,8 +15,8 @@ execute: |
     #shellcheck source=tests/lib/nested.sh
     . "$TESTSLIB/nested.sh"
 
-    INITIAL_REV="$(get_nested_core_revision_for_channel "${NESTED_CORE_CHANNEL}")"
-    NEW_REV="$(get_nested_core_revision_for_channel "${NESTED_CORE_REFRESH_CHANNEL}")"
+    INITIAL_REV="$(nested_get_core_revision_for_channel "${NESTED_CORE_CHANNEL}")"
+    NEW_REV="$(nested_get_core_revision_for_channel "${NESTED_CORE_REFRESH_CHANNEL}")"
 
     if [ "$INITIAL_REV" = "$NEW_REV" ]; then
         echo "Initial and target revisions are the same, skipping..."
@@ -24,21 +24,21 @@ execute: |
     fi
 
     # Install test snap
-    execute_remote "sudo snap install test-snapd-sh"
+    nested_execute "sudo snap install test-snapd-sh"
 
     # Ensure we have a good starting place
-    execute_remote "test-snapd-sh.sh -c 'echo hello'" | MATCH hello
+    nested_execute "test-snapd-sh.sh -c 'echo hello'" | MATCH hello
 
     # go to known good starting place
-    execute_remote "snap download core --${NESTED_CORE_CHANNEL}"
-    execute_remote "sudo snap ack core_*.assert"
-    execute_remote "sudo snap install core_*.snap"
+    nested_execute "snap download core --${NESTED_CORE_CHANNEL}"
+    nested_execute "sudo snap ack core_*.assert"
+    nested_execute "sudo snap install core_*.snap"
 
     # Check the initial core is installed and snaps can be executed
     test "$(get_nested_core_revision_installed)" = "${INITIAL_REV}"
 
     # Ensure test-snapd-sh works
-    execute_remote "test-snapd-sh.sh -c 'echo hello'" | MATCH hello
+    nested_execute "test-snapd-sh.sh -c 'echo hello'" | MATCH hello
 
     # Refresh
     refresh_to_new_core "$NESTED_CORE_REFRESH_CHANNEL"
@@ -47,15 +47,15 @@ execute: |
     test "$(get_nested_core_revision_installed)" = "${NEW_REV}"
 
     # Ensure test-snapd-sh works
-    execute_remote "test-snapd-sh.sh -c 'echo hello'" | MATCH hello
+    nested_execute "test-snapd-sh.sh -c 'echo hello'" | MATCH hello
 
     # Revert core
-    execute_remote "sudo snap revert core" || true
-    wait_for_no_ssh
-    wait_for_ssh
+    nested_execute "sudo snap revert core" || true
+    nested_nested_wait_for_no_ssh
+    nested_nested_wait_for_ssh
 
     # After revert, check initial core is installed  
     test "$(get_nested_core_revision_installed)" = "${INITIAL_REV}"
 
     # Ensure test-snapd-sh works
-    execute_remote "test-snapd-sh.sh -c 'echo hello'" | MATCH hello
+    nested_execute "test-snapd-sh.sh -c 'echo hello'" | MATCH hello
