--- a/tests/nested/core/hotplug/task.yaml
+++ b/tests/nested/core/hotplug/task.yaml
@@ -5,13 +5,13 @@ prepare: |
     . "$TESTSLIB/nested.sh"
 
     snap pack "$TESTSLIB"/snaps/serial-port-hotplug
-    copy_remote serial-port-hotplug_1.0_all.snap
+    nested_copy serial-port-hotplug_1.0_all.snap
 
-    if is_core_18_nested_system; then
-        execute_remote "sudo snap install --devmode jq-core18"
-        execute_remote "sudo snap alias jq-core18.jq jq"
+    if nested_is_core_18_system; then
+        nested_execute "sudo snap install --devmode jq-core18"
+        nested_execute "sudo snap alias jq-core18.jq jq"
     else
-        execute_remote "sudo snap install --devmode jq"
+        nested_execute "sudo snap install --devmode jq"
     fi
 
 restore: |
@@ -22,10 +22,10 @@ debug: |
     . "$TESTSLIB/nested.sh"
 
     set +e
-    execute_remote "snap connections --all"
-    execute_remote "snap list"
-    execute_remote "dmesg"
-    execute_remote 'sudo jq -r ".data[\"hotplug-slots\"]" /var/lib/snapd/state.json'
+    nested_execute "snap connections --all"
+    nested_execute "snap list"
+    nested_execute "dmesg"
+    nested_execute 'sudo jq -r ".data[\"hotplug-slots\"]" /var/lib/snapd/state.json'
 
 execute: |
     #shellcheck source=tests/lib/nested.sh
@@ -38,26 +38,26 @@ execute: |
         refresh_to_new_core "$NESTED_CORE_REFRESH_CHANNEL"
     fi
 
-    if execute_remote "udevadm info -e" | MATCH "ID_MODEL=QEMU_USB_SERIAL"; then
+    if nested_execute "udevadm info -e" | MATCH "ID_MODEL=QEMU_USB_SERIAL"; then
         echo "USB serial already registered, exiting..."
         exit 1
     fi
 
     echo "Enabling hotplug"
-    execute_remote "sudo snap set core experimental.hotplug=true"
+    nested_execute "sudo snap set core experimental.hotplug=true"
 
     echo "Plugging the device"
     hotplug_add_dev1
 
     # sanity checks to make sure qemu setup is correct
     for _ in $(seq 5); do
-        if execute_remote "udevadm info -e" | MATCH "ID_MODEL=QEMU_USB_SERIAL"; then
+        if nested_execute "udevadm info -e" | MATCH "ID_MODEL=QEMU_USB_SERIAL"; then
             break
         fi
         sleep 1
     done
 
-    execute_remote "ls /dev/tty*" | MATCH "ttyUSB0"
+    nested_execute "ls /dev/tty*" | MATCH "ttyUSB0"
 
     echo "Checking that qemuusbserial hotplug slot is present"
     check_slot_present qemuusbserial
@@ -69,13 +69,13 @@ execute: |
 
     # sanity check to make sure qemu event was triggered correctly
     for _ in $(seq 5); do
-        if execute_remote "udevadm info -e" | MATCH "ID_MODEL=QEMU_USB_SERIAL"; then
+        if nested_execute "udevadm info -e" | MATCH "ID_MODEL=QEMU_USB_SERIAL"; then
             sleep 1
         else
             break
         fi
     done
-    if execute_remote "udevadm info -e" | MATCH "ID_MODEL=QEMU_USB_SERIAL"; then
+    if nested_execute "udevadm info -e" | MATCH "ID_MODEL=QEMU_USB_SERIAL"; then
         echo "USB serial should not be registered anymore, exiting..."
         exit 1
     fi
@@ -91,10 +91,10 @@ execute: |
     check_slot_present qemuusbserial
 
     echo "Installing test snap with serial port plug"
-    execute_remote "sudo snap install --dangerous serial-port-hotplug_1.0_all.snap"
+    nested_execute "sudo snap install --dangerous serial-port-hotplug_1.0_all.snap"
 
     echo "Connecting hotplug slot of the first device"
-    execute_remote "sudo snap connect serial-port-hotplug:serial-port :qemuusbserial"
+    nested_execute "sudo snap connect serial-port-hotplug:serial-port :qemuusbserial"
     check_slot_connected qemuusbserial
 
     echo "Veryfing serial-port permissions of the snap"
@@ -135,16 +135,16 @@ execute: |
     verify_apparmor_profile "/dev/ttyUSB1"
 
     echo "Restarting snapd should restore both hotplug slots since devices are still present"
-    execute_remote "sudo systemctl stop snapd.service snapd.socket"
-    execute_remote "sudo systemctl start snapd.service snapd.socket"
+    nested_execute "sudo systemctl stop snapd.service snapd.socket"
+    nested_execute "sudo systemctl start snapd.service snapd.socket"
     check_slot_connected qemuusbserial
     check_slot_not_gone qemuusbserial
     check_slot_present qemuusbserial-1
 
     echo "Unplugging first device while snapd is stopped and then starting snapd remembers the slot internally due to connection"
-    execute_remote "sudo systemctl stop snapd.service snapd.socket"
+    nested_execute "sudo systemctl stop snapd.service snapd.socket"
     hotplug_del_dev1
-    execute_remote "sudo systemctl start snapd.service snapd.socket"
+    nested_execute "sudo systemctl start snapd.service snapd.socket"
     check_slot_not_present qemuusbserial
     check_slot_gone qemuusbserial
 
@@ -156,7 +156,7 @@ execute: |
     echo "Disconnecting first slot and then unplugging the device removes the slot completely"
     # manual snap disconnect doesn't implement retry and errors out if there are conflicting changes, so wait for hotplug changes to complete
     wait_for_all_changes
-    execute_remote "sudo snap disconnect serial-port-hotplug:serial-port :qemuusbserial"
+    nested_execute "sudo snap disconnect serial-port-hotplug:serial-port :qemuusbserial"
     check_slot_present qemuusbserial
     hotplug_del_dev1
     check_slot_not_present qemuusbserial
@@ -174,10 +174,10 @@ execute: |
     check_slot_device_path qemuusbserial "/dev/ttyUSB0"
 
     echo "Connecting hotplug slot of the first device again"
-    execute_remote "sudo snap connect serial-port-hotplug:serial-port :qemuusbserial"
+    nested_execute "sudo snap connect serial-port-hotplug:serial-port :qemuusbserial"
     check_slot_connected qemuusbserial
 
     echo "Hotplug slot stays after removing the snap"
-    execute_remote "sudo snap remove serial-port-hotplug"
+    nested_execute "sudo snap remove serial-port-hotplug"
     check_slot_present qemuusbserial
     check_slot_not_gone qemuusbserial
