--- a/tests/nested/manual/cloud-init-never-used-not-vuln/task.yaml
+++ b/tests/nested/manual/cloud-init-never-used-not-vuln/task.yaml
@@ -16,8 +16,8 @@ prepare: |
     #shellcheck source=tests/lib/nested.sh
     . "$TESTSLIB/nested.sh"
 
-    create_nested_core_vm
-    start_nested_core_vm
+    nested_create_core_vm
+    nested_start_core_vm
 
     # build the cloud-init NoCloud cdrom drive
     cd seed
@@ -26,8 +26,8 @@ prepare: |
 restore: |
     #shellcheck source=tests/lib/nested.sh
     . "$TESTSLIB/nested.sh"
-    destroy_nested_vm
-    cleanup_nested_env
+    nested_destroy_vm
+    nested_cleanup_env
 
 debug: |
     if [ -f snapd-before-reboot.logs ]; then
@@ -35,7 +35,7 @@ debug: |
         cat snapd-before-reboot.logs
     fi
     echo "logs from current nested VM boot snapd"
-    execute_remote "sudo journalctl -e --no-pager -u snapd" || true
+    nested_execute "sudo journalctl -e --no-pager -u snapd" || true
 
 execute: |
     #shellcheck source=tests/lib/nested.sh
@@ -50,31 +50,31 @@ execute: |
 
 
     # wait for done seeding
-    execute_remote "sudo snap wait system seed.loaded"
+    nested_execute "sudo snap wait system seed.loaded"
 
     # if we are not building from current, then we need to prep the snapd snap
     # to install with the fix, this simulates/verifies that devices in the field
     # without the fix will actually be fixed after they refresh
     if [ "$NESTED_BUILD_FROM_CURRENT" = "false" ]; then
-        if is_core_16_nested_system; then
+        if nested_is_core_16_system; then
             # build the core snap for this run
             repack_snapd_deb_into_core_snap "$PWD"
-            copy_remote "$PWD/core-from-snapd-deb.snap"
+            nested_copy "$PWD/core-from-snapd-deb.snap"
 
             # install the core snap
-            execute_remote "sudo snap install core-from-snapd-deb.snap --dangerous"
+            nested_execute "sudo snap install core-from-snapd-deb.snap --dangerous"
 
             # now we wait for the reboot for the new core snap
-            wait_for_no_ssh
-            wait_for_ssh
+            nested_wait_for_no_ssh
+            nested_wait_for_ssh
             
         else
             # build the snapd snap for this run
             repack_snapd_deb_into_snapd_snap "$PWD"
-            copy_remote "$PWD/snapd-from-deb.snap"
+            nested_copy "$PWD/snapd-from-deb.snap"
 
             # install the snapd snap
-            execute_remote "sudo snap install snapd-from-deb.snap --dangerous"
+            nested_execute "sudo snap install snapd-from-deb.snap --dangerous"
         fi
     fi
 
@@ -92,7 +92,7 @@ execute: |
     # not have been triggered. 
 
     echo "Waiting for cloud-init..."
-    execute_remote "cloud-init status --wait"
+    nested_execute "cloud-init status --wait"
 
     # TODO: is there a better thing we can wait for here instead? maybe the log
     # message from snapd directly via journalctl ?
@@ -101,21 +101,21 @@ execute: |
 
     # ensure that snapd disabled cloud-init with the cloud-init.disabled file
     echo "Ensuring that snapd restricted cloud-init"
-    execute_remote "cloud-init status" | MATCH "status: disabled"
-    execute_remote "test -f /etc/cloud/cloud-init.disabled"
-    execute_remote "! test -f /etc/cloud/cloud.cfg.d/zzzz_snapd.cfg"
+    nested_execute "cloud-init status" | MATCH "status: disabled"
+    nested_execute "test -f /etc/cloud/cloud-init.disabled"
+    nested_execute "! test -f /etc/cloud/cloud.cfg.d/zzzz_snapd.cfg"
 
     # save snapd logs before continuing as the logs are not persistent
-    execute_remote "sudo journalctl -e --no-pager -u snapd" > snapd-before-reboot.logs
+    nested_execute "sudo journalctl -e --no-pager -u snapd" > snapd-before-reboot.logs
 
     # gracefully shutdown so that we don't have file corruption
     echo "Gracefully shutting down the nested VM to prepare a simulated attack"
-    execute_remote "sudo shutdown -h now" || true
-    wait_for_no_ssh
+    nested_execute "sudo shutdown -h now" || true
+    nested_wait_for_no_ssh
 
     # now if we reboot and add a cloud-init drive, it will not be imported onto
     # the system
-    force_stop_nested_vm
+    nested_force_stop_vm
 
     # add the cloud-init drive as a CD-ROM drive
     NESTED_PARAM_CD="-cdrom $(pwd)/seed1.iso"
@@ -127,21 +127,21 @@ execute: |
     # is awkward to modify programmatically, so instead this will just re-create
     # the same systemd unit with different args
     echo "Restarting nested VM with attacker cloud-init CD-ROM drive"
-    start_nested_core_vm_unit "$NESTED_IMAGES_DIR/$(get_current_image_name)"
+    nested_start_core_vm_unit "$NESTED_IMAGES_DIR/$(nested_get_current_image_name)"
 
     # cloud-init should not actually run, since it was disabled, but in case the
     # test fails, for a better error, we will wait for cloud-init to report that
     # it is "done" or at least steady before ensuring that the attacker-user was
     # not created.
     echo "Waiting for cloud-init..."
-    execute_remote "cloud-init status --wait"
+    nested_execute "cloud-init status --wait"
 
     # the attacker-user should not have been created
     echo "The cloud-init user was not created"
-    execute_remote "cat /var/lib/extrausers/passwd" | NOMATCH attacker-user
+    nested_execute "cat /var/lib/extrausers/passwd" | NOMATCH attacker-user
 
     # cloud-init should still be disabled
     echo "cloud-init is still disabled"
-    execute_remote "cloud-init status" | MATCH "status: disabled"
-    execute_remote "test -f /etc/cloud/cloud-init.disabled"
-    execute_remote "! test -f /etc/cloud/cloud.cfg.d/zzzz_snapd.cfg"
+    nested_execute "cloud-init status" | MATCH "status: disabled"
+    nested_execute "test -f /etc/cloud/cloud-init.disabled"
+    nested_execute "! test -f /etc/cloud/cloud.cfg.d/zzzz_snapd.cfg"
