--- a/tests/nested/manual/preseed/task.yaml
+++ b/tests/nested/manual/preseed/task.yaml
@@ -25,9 +25,9 @@ prepare: |
   dpkg -i "$SPREAD_PATH"/../snapd_*.deb
 
   # create a VM and mount a cloud image
-  create_nested_classic_vm
+  nested_create_classic_vm
   mkdir -p "$IMAGE_MOUNTPOINT"
-  IMAGE_NAME=$(get_image_name classic)
+  IMAGE_NAME=$(nested_get_image_name classic)
   mount_ubuntu_image "$NESTED_IMAGES_DIR/$IMAGE_NAME" "$IMAGE_MOUNTPOINT"
 
   # on 20.04 snapd from the deb is newer than snapd from seeds;
@@ -48,14 +48,14 @@ prepare: |
 restore: |
   #shellcheck source=tests/lib/nested.sh
   . "$TESTSLIB/nested.sh"
-  destroy_nested_vm
+  nested_destroy_vm
 
   # any of the restore commands can fail depending on where execute part stopped,
   # account for that with ||true.
   #shellcheck source=tests/lib/preseed.sh
   . "$TESTSLIB/preseed.sh"
   umount_ubuntu_image "$IMAGE_MOUNTPOINT" || true
-  cleanup_nested_env
+  nested_cleanup_env
 
 execute: |
   #shellcheck source=tests/lib/nested.sh
@@ -78,36 +78,36 @@ execute: |
 
   #shellcheck source=tests/lib/nested.sh
   . "$TESTSLIB/nested.sh"
-  start_nested_classic_vm
+  nested_start_classic_vm
 
   echo "Waiting for firstboot seeding to finish"
-  execute_remote "sudo snap wait system seed.loaded"
-  execute_remote "snap changes" | MATCH "Done .+ Initialize system state"
+  nested_execute "sudo snap wait system seed.loaded"
+  nested_execute "snap changes" | MATCH "Done .+ Initialize system state"
 
   echo "Checking that the system-key after first boot is the same as that from preseeding"
   # note, this doesn't actually test the functionality, but acts as a canary:
   # the test is run against a vm image with ubuntu release matching that from spread host;
   # system-key check can fail if the nested vm image differs too much from the spread host system,
   # e.g. when the list of apparmor features differs due to significant kernel update.
-  execute_remote "cat /var/lib/snapd/system-key" > system-key.real
+  nested_execute "cat /var/lib/snapd/system-key" > system-key.real
   diff -u -w system-key.real system-key.preseeded
 
-  execute_remote "snap debug seeding" | MATCH "preseeded:\s+true"
-  execute_remote "snap debug seeding" | MATCH "seeded:\s+true"
+  nested_execute "snap debug seeding" | MATCH "preseeded:\s+true"
+  nested_execute "snap debug seeding" | MATCH "seeded:\s+true"
   # FIXME: this just checks that the time is of the form "xxx.xxxs", which could
   # break if the preseeding takes more than 60s and golang formats the 
   # time.Duration as "1m2.03s", etc. but for now this should be good enough
-  execute_remote "snap debug seeding" | MATCH "image-preseeding:\s+[0-9]+\.[0-9]+s"
-  execute_remote "snap debug seeding" | MATCH "seed-completion:\s+[0-9]+\.[0-9]+s"
+  nested_execute "snap debug seeding" | MATCH "image-preseeding:\s+[0-9]+\.[0-9]+s"
+  nested_execute "snap debug seeding" | MATCH "seed-completion:\s+[0-9]+\.[0-9]+s"
 
   # we should not have had any system-key difference as per above, so we 
   # shouldn't output the preseed system-key or the seed-restart-system-key
-  execute_remote "snap debug seeding" | NOMATCH "preseed-system-key:"
-  execute_remote "snap debug seeding" | NOMATCH "seed-restart-system-key:"
+  nested_execute "snap debug seeding" | NOMATCH "preseed-system-key:"
+  nested_execute "snap debug seeding" | NOMATCH "seed-restart-system-key:"
 
   echo "Checking that lxd snap is operational"
-  execute_remote "snap list" | not MATCH "broken"
-  execute_remote "snap services" | MATCH "lxd.activate +enabled +inactive"
-  execute_remote "snap services" | MATCH "lxd.daemon +enabled +inactive +socket-activated"
-  execute_remote "sudo lxd init --auto"
-  execute_remote "snap services" | MATCH "+lxd.daemon +enabled +active +socket-activated"
+  nested_execute "snap list" | not MATCH "broken"
+  nested_execute "snap services" | MATCH "lxd.activate +enabled +inactive"
+  nested_execute "snap services" | MATCH "lxd.daemon +enabled +inactive +socket-activated"
+  nested_execute "sudo lxd init --auto"
+  nested_execute "snap services" | MATCH "+lxd.daemon +enabled +active +socket-activated"
