--- a/tests/nested/manual/refresh-revert-fundamentals/task.yaml
+++ b/tests/nested/manual/refresh-revert-fundamentals/task.yaml
@@ -30,8 +30,8 @@ prepare: |
     #shellcheck source=tests/lib/nested.sh
     . "$TESTSLIB/nested.sh"
     
-    FROM_REV="$(get_snap_rev_for_channel "$SNAP" $TRACK/$NESTED_CORE_CHANNEL)"
-    TO_REV="$(get_snap_rev_for_channel "$SNAP" $TRACK/$NESTED_CORE_REFRESH_CHANNEL)"
+    FROM_REV="$(nested_get_snap_rev_for_channel "$SNAP" $TRACK/$NESTED_CORE_CHANNEL)"
+    TO_REV="$(nested_get_snap_rev_for_channel "$SNAP" $TRACK/$NESTED_CORE_REFRESH_CHANNEL)"
 
     if [ "$FROM_REV" = "$TO_REV" ]; then
         echo "Initial and target revisions are the same, skipping..."
@@ -39,8 +39,8 @@ prepare: |
         exit
     fi
 
-    create_nested_core_vm
-    start_nested_core_vm
+    nested_create_core_vm
+    nested_start_core_vm
 
 restore: |
     #shellcheck source=tests/lib/nested.sh
@@ -51,8 +51,8 @@ restore: |
         exit
     fi
 
-    destroy_nested_vm
-    cleanup_nested_env
+    nested_destroy_vm
+    nested_cleanup_env
 
     rm -f "$NESTED_IMAGES_DIR/ubuntu-core.img"
 
@@ -64,74 +64,74 @@ execute: |
         exit
     fi
 
-    FROM_REV="$(get_snap_rev_for_channel "$SNAP" $TRACK/$NESTED_CORE_CHANNEL)"
-    TO_REV="$(get_snap_rev_for_channel "$SNAP" $TRACK/$NESTED_CORE_REFRESH_CHANNEL)"
+    FROM_REV="$(nested_get_snap_rev_for_channel "$SNAP" $TRACK/$NESTED_CORE_CHANNEL)"
+    TO_REV="$(nested_get_snap_rev_for_channel "$SNAP" $TRACK/$NESTED_CORE_REFRESH_CHANNEL)"
 
-    execute_remote "snap list $SNAP" | MATCH "^${SNAP}.*${FROM_REV}.*${TRACK}/${NESTED_CORE_CHANNEL}.*"
+    nested_execute "snap list $SNAP" | MATCH "^${SNAP}.*${FROM_REV}.*${TRACK}/${NESTED_CORE_CHANNEL}.*"
     # The snap is refreshed
-    REFRESH_ID=$(execute_remote "sudo snap refresh --no-wait --channel $NESTED_CORE_REFRESH_CHANNEL $SNAP")
+    REFRESH_ID=$(nested_execute "sudo snap refresh --no-wait --channel $NESTED_CORE_REFRESH_CHANNEL $SNAP")
 
     case "$SNAP" in
         snapd|pc)
             # we manually reboot even after snapd refresh to ensure that if
             # resealing took place we are still able to boot
-            execute_remote "snap watch $REFRESH_ID" || break
-            execute_remote "snap changes" | MATCH "$REFRESH_ID\s+Done\s+.*" || break
-            execute_remote "sudo reboot" || true
+            nested_execute "snap watch $REFRESH_ID" || break
+            nested_execute "snap changes" | MATCH "$REFRESH_ID\s+Done\s+.*" || break
+            nested_execute "sudo reboot" || true
             ;;
         pc-kernel|core20)
             # don't manually reboot, wait for automatic snapd reboot
             ;;
     esac
-    wait_for_no_ssh
-    wait_for_ssh
+    nested_wait_for_no_ssh
+    nested_wait_for_ssh
 
     # Check the new version of the snaps is correct after the system reboot
-    execute_remote "snap list $SNAP" | MATCH "^${SNAP}.*${TO_REV}.*${TRACK}/${NESTED_CORE_REFRESH_CHANNEL}.*"
+    nested_execute "snap list $SNAP" | MATCH "^${SNAP}.*${TO_REV}.*${TRACK}/${NESTED_CORE_REFRESH_CHANNEL}.*"
 
     # We check the change is completed
     case "$SNAP" in
         pc-kernel|core20)
             for _ in $(seq 10); do
-                if execute_remote "snap changes" | MATCH "$REFRESH_ID\s+Done\s+.*"; then
+                if nested_execute "snap changes" | MATCH "$REFRESH_ID\s+Done\s+.*"; then
                     break
                 fi
                 sleep 1
             done
-            execute_remote "snap changes" | MATCH "$REFRESH_ID\s+Done\s+.*"
+            nested_execute "snap changes" | MATCH "$REFRESH_ID\s+Done\s+.*"
             ;;
     esac
 
     # The snap is reverted
-    REVERT_ID=$(execute_remote "sudo snap revert --no-wait $SNAP")
+    REVERT_ID=$(nested_execute "sudo snap revert --no-wait $SNAP")
 
     case "$SNAP" in
         snapd|pc)
             # we manually reboot even after snapd refresh to ensure that if
             # resealing took place we are still able to boot
-            execute_remote "snap watch $REVERT_ID" || break
-            execute_remote "snap changes" | MATCH "$REVERT_ID\s+Done\s+.*" || break
-            execute_remote "sudo reboot" || true
+            nested_execute "snap watch $REVERT_ID" || break
+            nested_execute "snap changes" | MATCH "$REVERT_ID\s+Done\s+.*" || break
+            nested_execute "sudo reboot" || true
             ;;
         pc-kernel|core20)
             # don't manually reboot, wait for automatic snapd reboot
             ;;
     esac
-    wait_for_no_ssh
-    wait_for_ssh
+    nested_wait_for_no_ssh
+    nested_wait_for_ssh
 
     # Check the version of the snaps after the revert is correct
-    execute_remote "snap list $SNAP" | MATCH "^${SNAP}.*${FROM_REV}.*${TRACK}/${NESTED_CORE_REFRESH_CHANNEL}.*"
+    nested_execute "snap list $SNAP" | MATCH "^${SNAP}.*${FROM_REV}.*${TRACK}/${NESTED_CORE_REFRESH_CHANNEL}.*"
 
     # We check the change is completed
     case "$SNAP" in
         pc-kernel|core20)
             for _ in $(seq 10); do
-                if execute_remote "snap changes" | MATCH "$REVERT_ID\s+Done\s+.*"; then
+                if nested_execute "snap changes" | MATCH "$REVERT_ID\s+Done\s+.*"; then
                     break
                 fi
                 sleep 1
             done
-            execute_remote "snap changes" | MATCH "$REVERT_ID\s+Done\s+.*"
+            nested_execute "snap changes" | MATCH "$REVERT_ID\s+Done\s+.*"
             ;;
     esac
